doodle spacing fixed

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -12,7 +12,7 @@
 .doodle-canvas {
   // border: 1px #000 solid;
   border-radius: 2px;
-  box-shadow: 0px 0px 10px rgba(145, 144, 144, 0.377);
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.247);
 }
 
 .gallery-canvas {
